css/main.css
* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    -ms-box-sizing: border-box;
    box-sizing: border-box;
	color: #2d3c49;
	font-family: 'Muli', sans-serif;
}

/* Apply this class to prevent images going beyond their containers. */
.img-fluid {
	max-width: 100%;
}

.container {
	margin: 16px;
	max-width: 1200px;
}

.page-header {
	padding-bottom: 8px;
	border-bottom: 4px solid #7d97ad;
	margin-bottom: 16px;
}

.header-logo {
    max-width: 6em;
}

.header-text {
	text-transform: uppercase;
}

.header-title {
	font-weight: 200;
	font-size: 2em;
	margin-top: 0.25em;
	margin-bottom: 0;
}

.header-subtitle {
    font-size: 1em;
	margin-top: 8px;
}

.portfolio-header {
	color: #7d97ad;
}

.portfolio-item {
	text-align: center;
}

.portfolio-item-title {
	font-size: 2em;
	text-transform: uppercase;
	margin: 8px 0;
}

.portfolio-item-link {
    display: block;
	font-weight: 200;
	font-size: 0.8em;
    min-height: 48px;
    padding-top: 16px;
	text-decoration: none;
}

.page-footer {
    border-top: 4px solid #7d97ad;
}

[class*="zocial-"]:before {
	color: #02b3e4;
    display: inline-block;
    font-family: "zocial", sans-serif;
    width: 1.5em;
}

.social-links a {
    display: block;
    min-height: 48px;
    padding-top: 16px;
    text-decoration: none;
}

/**
 * Grid layout
 *
 * Approach to grid layout is based on "Better, Simpler Grid Systems"
 * by Philip Walton at Solved by Flexbox:
 * https://philipwalton.github.io/solved-by-flexbox/demos/grids/
 */

.grid {
	display: flex;
	flex-wrap: wrap;
}

.grid-cell {
	flex: 1;
}

.grid-gutters {
    margin: -1em 0 0 -1em;
}

.grid-gutters > .grid-cell {
    padding: 1em 0 0 1em;
}

.grid-fit > .grid-cell {
    flex: 1;
}

.grid-full > .grid-cell {
    flex: 0 0 100%;
}

.grid-1of2 > .grid-cell {
    flex: 0 0 50%;
}

.grid-1of3 > .grid-cell {
    flex: 0 0 33.3333%;
}

.grid-1of4 > .grid-cell {
    flex: 0 0 25%;
}

/**
 * Media queries, including responsive grid layout classes
 */

@media screen and (min-width: 30em) {
    .header-text {
        text-align: right;
    }

    .grid-small-fit > .grid-cell {
        flex: 1;
    }

    .grid-small-full > .grid-cell {
        flex: 0 0 100%;
    }

    .grid-small-1of2 > .grid-cell {
        flex: 0 0 50%;
    }

    .grid-small-1of3 > .grid-cell {
        flex: 0 0 33.3333%;
    }

    .grid-small-1of4 > .grid-cell {
        flex: 0 0 25%;
    }
}

@media screen and (min-width: 40em) {
    .header-title {
        font-size: 3em;
        margin-top: 0;
    }

    .header-subtitle {
        font-size: 1.25em;
    }
}

@media screen and (min-width: 60em) {
    .colophon {
        text-align: right;
    }

    .grid-large-fit > .grid-cell {
        flex: 1;
    }

    .grid-large-full > .grid-cell {
        flex: 0 0 100%;
    }

    .grid-large-1of2 > .grid-cell {
        flex: 0 0 50%;
    }

    .grid-large-1of3 > .grid-cell {
        flex: 0 0 33.3333%;
    }

    .grid-large-1of4 > .grid-cell {
        flex: 0 0 25%;
    }
}

@media screen and (min-width: 77em) {
	.container {
		margin: 16px auto;
	}
}

